@@ -34,6 +34,9 @@
 	<LI>HTMLDOC no longer enables interpolation of 2-color
 	images.
 
+	<LI>The default vertical alignment of images is "BOTTOM"
+	to match the HTML specification.
+
 	<H3 _HD_OMIT_TOC>Bug Fixes</H3>
 
 	<LI>Whitespace before a link was underlined.
